chore: upgrade to Java 21
Closes: MODINVSTOR-1364