@@ -6,7 +6,6 @@ import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.folio.HttpStatus.HTTP_CREATED;
 import static org.folio.HttpStatus.HTTP_UNPROCESSABLE_ENTITY;
 import static org.folio.rest.api.ItemEffectiveCallNumberComponentsTest.ITEM_LEVEL_CALL_NUMBER_TYPE;
-import static org.folio.rest.support.AdditionalHttpStatusCodes.UNPROCESSABLE_ENTITY;
 import static org.folio.rest.support.HttpResponseMatchers.errorMessageContains;
 import static org.folio.rest.support.HttpResponseMatchers.errorParametersValueIs;
 import static org.folio.rest.support.HttpResponseMatchers.statusCodeIs;
@@ -74,7 +73,6 @@ import org.folio.HttpStatus;
 import org.folio.rest.jaxrs.model.Errors;
 import org.folio.rest.jaxrs.model.Note;
 import org.folio.rest.persist.PostgresClient;
-import org.folio.rest.support.AdditionalHttpStatusCodes;
 import org.folio.rest.support.IndividualResource;
 import org.folio.rest.support.JsonArrayHelper;
 import org.folio.rest.support.JsonErrorResponse;
@@ -369,7 +367,7 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
 
     JsonErrorResponse response = createCompleted.get(TIMEOUT, TimeUnit.SECONDS);
 
-    assertThat(response.getStatusCode(), is(AdditionalHttpStatusCodes.UNPROCESSABLE_ENTITY));
+    assertThat(response.getStatusCode(), is(HTTP_UNPROCESSABLE_ENTITY.toInt()));
     assertThat(response.getErrors(), hasSoleMessageContaining("Unrecognized field"));
   }
 
@@ -2375,22 +2373,22 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
 
     final Response duplicateResponse = create(holdingsStorageUrl(""), duplicateHoldings);
 
-    assertThat(duplicateResponse.getStatusCode(), is(UNPROCESSABLE_ENTITY));
+    assertThat(duplicateResponse.getStatusCode(), is(HTTP_UNPROCESSABLE_ENTITY.toInt()));
 
     final Errors errors = duplicateResponse.getJson().mapTo(Errors.class);
 
     assertThat(errors, notNullValue());
     assertThat(errors.getErrors(), notNullValue());
     assertThat(errors.getErrors().size(), is(1));
-    assertThat(errors.getErrors().get(0), notNullValue());
-    assertThat(errors.getErrors().get(0).getMessage(),
+    assertThat(errors.getErrors().getFirst(), notNullValue());
+    assertThat(errors.getErrors().getFirst().getMessage(),
       containsString("HRID value already exists in table holdings_record: ho00000000001"));
-    assertThat(errors.getErrors().get(0).getParameters(), notNullValue());
-    assertThat(errors.getErrors().get(0).getParameters().size(), is(1));
-    assertThat(errors.getErrors().get(0).getParameters().get(0), notNullValue());
-    assertThat(errors.getErrors().get(0).getParameters().get(0).getKey(),
+    assertThat(errors.getErrors().getFirst().getParameters(), notNullValue());
+    assertThat(errors.getErrors().getFirst().getParameters().size(), is(1));
+    assertThat(errors.getErrors().getFirst().getParameters().getFirst(), notNullValue());
+    assertThat(errors.getErrors().getFirst().getParameters().getFirst().getKey(),
       is("lower(f_unaccent(jsonb ->> 'hrid'::text))"));
-    assertThat(errors.getErrors().get(0).getParameters().get(0).getValue(),
+    assertThat(errors.getErrors().getFirst().getParameters().getFirst().getValue(),
       is("ho00000000001"));
 
     log.info("Finished cannotCreateAHoldingsWhenDuplicateHRIDIsSupplied");
@@ -2469,14 +2467,14 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
 
     assertThat(errors, notNullValue());
     assertThat(errors.getErrors(), notNullValue());
-    assertThat(errors.getErrors().get(0), notNullValue());
-    assertThat(errors.getErrors().get(0).getMessage(),
+    assertThat(errors.getErrors().getFirst(), notNullValue());
+    assertThat(errors.getErrors().getFirst().getMessage(),
       is("HRID value already exists in table holdings_record: ho00000001000"));
-    assertThat(errors.getErrors().get(0).getParameters(), notNullValue());
-    assertThat(errors.getErrors().get(0).getParameters().get(0), notNullValue());
-    assertThat(errors.getErrors().get(0).getParameters().get(0).getKey(),
+    assertThat(errors.getErrors().getFirst().getParameters(), notNullValue());
+    assertThat(errors.getErrors().getFirst().getParameters().getFirst(), notNullValue());
+    assertThat(errors.getErrors().getFirst().getParameters().getFirst().getKey(),
       is("lower(f_unaccent(jsonb ->> 'hrid'::text))"));
-    assertThat(errors.getErrors().get(0).getParameters().get(0).getValue(),
+    assertThat(errors.getErrors().getFirst().getParameters().getFirst().getValue(),
       is("ho00000001000"));
   }
 
@@ -2686,14 +2684,16 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
 
     assertThat(errors, notNullValue());
     assertThat(errors.getErrors(), notNullValue());
-    assertThat(errors.getErrors().get(0), notNullValue());
-    assertThat(errors.getErrors().get(0).getMessage(),
+    var error = errors.getErrors().getFirst();
+    assertThat(error, notNullValue());
+    assertThat(error.getMessage(),
       is("HRID value already exists in table holdings_record: ho00000000001"));
-    assertThat(errors.getErrors().get(0).getParameters(), notNullValue());
-    assertThat(errors.getErrors().get(0).getParameters().get(0), notNullValue());
-    assertThat(errors.getErrors().get(0).getParameters().get(0).getKey(),
+    assertThat(error.getParameters(), notNullValue());
+    var parameter = error.getParameters().getFirst();
+    assertThat(parameter, notNullValue());
+    assertThat(parameter.getKey(),
       is("lower(f_unaccent(jsonb ->> 'hrid'::text))"));
-    assertThat(errors.getErrors().get(0).getParameters().get(0).getValue(),
+    assertThat(parameter.getValue(),
       is("ho00000000001"));
 
     for (int i = 0; i < holdingsArray.size(); i++) {
@@ -2759,7 +2759,7 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
       .getMany("fullCallNumber == \"%s\"", "prefix callNumber suffix");
 
     assertThat(foundHoldings.size(), is(1));
-    assertThat(foundHoldings.get(0).getId(), is(wholeCallNumberHolding.getId()));
+    assertThat(foundHoldings.getFirst().getId(), is(wholeCallNumberHolding.getId()));
   }
 
   @Test
@@ -2814,11 +2814,11 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
 
     var foundPlanet = holdingsClient.getMany("instance.title = planet");
     assertThat(foundPlanet, hasSize(1));
-    assertThat(foundPlanet.get(0).getId(), is(holdingPlanet));
+    assertThat(foundPlanet.getFirst().getId(), is(holdingPlanet));
 
     var foundUprooted = holdingsClient.getMany("instance.title = uprooted");
     assertThat(foundUprooted, hasSize(1));
-    assertThat(foundUprooted.get(0).getId(), is(holdingUprooted));
+    assertThat(foundUprooted.getFirst().getId(), is(holdingUprooted));
   }
 
   @Test
@@ -3008,7 +3008,7 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
       .getMany("cql.allRecords=1 not discoverySuppress==true");
 
     assertThat(suppressedHoldings.size(), is(1));
-    assertThat(suppressedHoldings.get(0).getId(), is(suppressedHolding.getId()));
+    assertThat(suppressedHoldings.getFirst().getId(), is(suppressedHolding.getId()));
 
     assertThat(notSuppressedHoldings.size(), is(2));
     assertThat(notSuppressedHoldings.stream()
@@ -3468,7 +3468,7 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
   private List<String> getTags(JsonObject json) {
     return json.getJsonObject("tags").getJsonArray("tagList")
       .stream()
-      .map(obj -> (String) obj)
+      .map(String.class::cast)
       .toList();
   }
 
@@ -3509,6 +3509,7 @@ public class HoldingsStorageTest extends TestBaseWithInventoryUtil {
       return NAME;
     }
 
+    @Override
     public boolean applyGlobally() {
       return false;
     }
